tests/vendor/valid/trivial/sub_neg.c
//expect 3
//tags: trivial, binary
int main() {
    return 2- -1;
}