tests/vendor/invalid/syntax/malformed_paren.c
//tags: trivial
int main(void) {
    return 2 (- 3);
}